fix navbar on smaller screens1

--- a/front/src/components/navbar.css
+++ b/front/src/components/navbar.css
@@ -83,6 +83,7 @@
     align-items: center;
     text-align: center;
     margin-top: 1rem;
+
   }
   .nav-list.show {
     display: flex;
@@ -98,6 +99,6 @@
   .nav-link {
     padding: 0.5rem 0;
     width: 100%;
-    border-radius: 0; /* Remove rounded corners on mobile */
+    border-radius: 3px; 
   }
 }
